Integración cambios BD en el servicio (parcial)
- Se actualiza el servicio de FIRe para adaptarlo a los cambios de BD realizados para su uso en el módulo de administración.
- Se agrega el cacheo temporal de la configuración cargada de BD.
- Se modifican campos de BD y propiedades de los ficheros de configuración.
- Se corrigen comentarios y logs.
- Queda pendiente establecer configuración particular de las aplicaciones.